decouple reactize from always diff the body element

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="/reactize.css" media="screen">
     <script src="/dist/reactize.min.js"></script>
+    <script type="text/javascript">
+      window.addEventListener("load", Reactize.applyBodyDiff);
+    </script>
   </head>
   <body>
     <div class="container">
