--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,8 @@
 
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="/reactize.css" media="screen">
-    <script src="/dist/reactize.min.js"></script>
+    <script src="/dist/turbolinks.js"></script>
+    <script src="/dist/reactize.js"></script>
   </head>
   <body>
     <div class="container">
@@ -16,8 +17,8 @@
         <div class="col-md-6 col-md-offset-3">
           <h1>Reactize</h1>
           <p class="lead">
-            This is a mix of <a href="http://facebook.github.io/react/">React</a>,
-            React's <a href="http://facebook.github.io/react/docs/jsx-in-depth.html">JSX</a>,
+            This is a mix of <a href="http://facebook.github.io/react/">Virtual-DOM</a>,
+            <a href="https://github.com/TimBeyer/html-to-vdom">html-to-vdom</a>,
             and <a href="https://github.com/rails/turbolinks/">Turbolinks</a> that
             applies DOM "diffs" without any server configuration&mdash;it
             just needs plain old HTML.
@@ -37,6 +38,9 @@
           <p class="text-muted" title="<%= @request_time.to_s %>">
             Requested at <%= @request_time.strftime("%Y-%m-%d %H:%M:%S") %>
           </p>
+          <form>
+            <input type="submit" value="<%= @request_time.strftime("%Y-%m-%d %H:%M:%S") %>"/>
+          </form>
 
           <h3>What it's doing</h3>
           <p>"Re-request this page" is just a link to the current page. When you
@@ -47,14 +51,13 @@
             class.</p>
           <p>With Turbolinks alone, the entire <code>body</code> would be
             replaced, and transitions would not happen. In this little demo
-            though, React adds and removes classes and text, and the attribute
+            though, Virtual-DOM adds and removes classes and text, and the attribute
             changes are animated with CSS transitions. The DOM is otherwise
             left in tact.</p>
 
           <h3>The Code</h3>
           <p>
-            Reactize turns the <code>body</code> into a React
-            element: <a href="https://github.com/ssorallen/turbo-react/blob/master/src/reactize.js">reactize.js</a>
+            Reactize creates a virtual-dom of the <code>body</code> element: <a href="https://github.com/ssorallen/turbo-react/blob/master/src/reactize.js">reactize.js</a>
           </p>
           <p>
             Reactize is hooked into
