using minified version

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,8 +8,7 @@
 
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="/reactize.css" media="screen">
-    <script src="/dist/turbolinks.js"></script>
-    <script src="/dist/reactize.js"></script>
+    <script src="/dist/reactize.min.js"></script>
   </head>
   <body>
     <div class="container">
